# gist

./: .gitattributes  .gitignore  BENCHMARKS.md  LICENSE  README.md  bench.sh  demo.sh  run.sh
.omx/: metrics.json
.omx/logs/: tmux-hook-2026-07-02.jsonl  (+1 more)
native/: README.md  gist.cdc  gist_cf.cdc  gist_cf2.cdc  gist_gate.cdc  gist_ladder.cdc  gist_lattice.cdc  gist_laws.cdc  gist_learn.cdc  gist_neural.cdc  gist_pyramid.cdc  gist_scenes_test.cdc  gist_scenes_train.cdc  gist_train_net.cdc  gist_trained.cdc  verify_gist.sh
oracle/: DERIVATION.md  NEURAL.md  NON_SHIPPED.md  PROPOSAL_DO_OPERATOR.md  README.md  gistssm_trained_weights.json  pyproject.toml
oracle/demo/: run_demo.py
oracle/src/gist_engine/: __init__.py  algebra.py  bridge.py  causal.py  cdcgrad.py  cdcread.py  cli.py  contract.py  crypto.py  democorpus.py  engine.py  field.py  gate.py  gist.cdc  gistnet.py  ladder.py  ledger.py  mcp_server.py  metrics.py  neural.py  ports.py  reasonloop.py  verdict.py  walks.py
oracle/src/gist_engine.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
oracle/tests/: test_algebra_laws.py  test_bridge_parity.py  test_causal.py  test_contract.py  test_engine_e2e.py  test_field_reduction.py  test_gistnet.py  test_ledger_replay.py  test_metrics_gate_ladder.py  test_neural.py  test_reasonloop.py  test_verdict_mcp.py  test_walks_spectrum.py
paper/: TRAINING_EXECUTION_DRAFT.md  main.tex
runtime/: ATTRIBUTION.md  cdc_boot.py  cdc_native_runtime.c  cdc_source.c  cdc_source.h
torchcdc/: README.md  data.py  hybrid.py  tensorcdc.py  test_torchcdc.py  train.py
(+3 files in other folders)
