[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "gist-engine"
version = "1.1.0"
description = "GIST: Gated Insight Synthesis Topology - a ledger-reactive synthesis mechanism derived from first principles out of the BiDi Coherence-Delta Calculus (CDC). Embeddable library + standalone CLI, zero dependencies."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Edward Ellis" }]
keywords = [
  "coherence",
  "balanced-ternary",
  "synthesis",
  "research-orchestration",
  "cdc",
  "bidi",
  "event-sourcing",
  "merkle",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering",
]

[project.scripts]
gist = "gist_engine.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
gist_engine = ["gist.cdc"]
